force-app/main/default/objects/User_Skill__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Workforce to create active core skill</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>