force-app/main/default/objects/User_Skill__c/fields/Agency_Information__c.field-meta.xml
<CustomField>
    <fullName>Agency_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agency Information</label>
    <referenceTo>Agency_Information__c</referenceTo>
    <relationshipLabel>User Skills</relationshipLabel>
    <relationshipName>User_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>