force-app/main/default/objects/User_Skill__c/fields/Backup_Resource__c.field-meta.xml
<CustomField>
    <fullName>Backup_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Will be used as a backup user in IR skill assignment</description>
    <label>Backup Resource</label>
    <referenceTo>User_Role__c</referenceTo>
    <relationshipLabel>User Skills (Backup Resource)</relationshipLabel>
    <relationshipName>User_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>