force-app/main/default/objects/User_Skill__c/fields/IA_Skill_Hash__c.field-meta.xml
<CustomField>
    <fullName>IA_Skill_Hash__c</fullName>
    <description>FoR IA Skill #Ordertype#StateGroup</description>
    <formula>IF( Skill_Role_Name__c = &apos;Implementation Advocate&apos;, 

 &apos;#&apos; &amp; Skill_Order_type__c &amp; &apos;#&apos; &amp; State_Group__c &amp; &apos;#&apos;&amp; IF(Benefits_Big_Desk__c,&apos;true&apos;,&apos;false&apos;) &amp; &apos;#&apos;&amp; IF(Maestro__c,&apos;true&apos;,&apos;false&apos;)
,&apos;&apos;)</formula>
    <label>IA Skill Hash</label>
    <type>Text</type>
</CustomField>