force-app/main/default/objects/User_Skill__c/fields/Maestro__c.field-meta.xml
<CustomField>
    <fullName>Maestro__c</fullName>
    <description>This skill indicates that the onboarding advocate should only receive benefit orders where &apos;Maestro&apos; is marked as TRUE</description>
    <formula>Skill__r.Maestro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maestro</label>
    <type>Checkbox</type>
</CustomField>