force-app/main/default/objects/User_Skill__c/fields/Skill_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Skill_Role_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Skill Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>