force-app/main/default/objects/User_Skill__c/fields/User_Role__c.field-meta.xml
<CustomField>
    <fullName>User_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Role</label>
    <referenceTo>User_Role__c</referenceTo>
    <relationshipLabel>User Skills</relationshipLabel>
    <relationshipName>User_Role</relationshipName>
    <type>Lookup</type>
</CustomField>